tests/fail/elaboration/boolean-literal/type-mismatch.snap
stdout = ''
stderr = '''
error: type mismatch, expected: Bool, got Void
  ┌─ tests/fail/elaboration/boolean-literal/type-mismatch.fathom:3:1
  │
3 │ true : Void
  │ ^^^^

'''
